Publish question on create fix some wordwrapping for answers

--- a/src/app/sub-components/answer/answer.component.sass
+++ b/src/app/sub-components/answer/answer.component.sass
@@ -7,6 +7,7 @@
     max-height: 350px
     min-height: 75px
     overflow-y: scroll
+    overflow-x: hidden
 
 .answerOwner
     color: #ffffffcc
@@ -16,7 +17,7 @@
 
 .answerBody
     color: #ffffffcc
-    white-space: pre
+    white-space: pre-wrap
     padding-left: 10px
     padding-top: 5px
 
